--- a/index.html
+++ b/index.html
@@ -4932,6 +4932,5 @@ lp.jQuery().ready(function($) {
   $('form').append(jevField);
 });
 </script>
-<!-- lp:insertions end body:after -->
-<center><font size="2">This is a free demo result from the <a href="http://www.waybackmachinedownloader.com/en/">Wayback Machine</a> Downloader. It is not a complete website.</font></center></body>
+</body>
 </html>
